@@ -81,6 +81,9 @@ Fixed bugs:
 * Regression: concat fixlastline="true" should not have applied to
   nested text, but did in Ant 1.7.0. Bugzilla 42369.
 
+* Regression: ant.version was not passed down in <subant>.
+  This worked in Ant1.6.5, but not in 1.7.0. Bugzilla bug 42263 
+
 Other changes:
 --------------
 * <script> now has basic support for JavaFX scripts
